@@ -119,6 +119,7 @@ This feature was developed by Sage Abdullah.
  * Switch userbar to initialise a Web Component to avoid styling clashes (Albina Starykova)
  * Refactor userbar stylesheets to use the same CSS loading as the rest of the admin (Albina Starykova)
  * Remove unused search-bar and button-filter styles (Thibaud Colas)
+ * Use util method to construct dummy requests in tests (Jake Howard)
 
 ## Upgrade considerations
 
