@@ -1,8 +1,8 @@
-from django.http import HttpRequest
 from django.template import Context, RequestContext, Template, engines
 from django.test import TestCase
 from django.test.utils import override_settings
 
+from wagtail.coreutils import get_dummy_request
 from wagtail.models import Site
 from wagtail.test.utils import WagtailTestUtils
 
@@ -204,10 +204,7 @@ class TestSiteSettingsJinja(TemplateTestCase):
                 site = context["site"]
             else:
                 site = Site.objects.get(is_default_site=True)
-            request = HttpRequest()
-            request.META["HTTP_HOST"] = site.hostname
-            request.META["SERVER_PORT"] = site.port
-            context["request"] = request
+            context["request"] = get_dummy_request(site=site)
 
         template = self.engine.from_string(string)
         return template.render(context)
